Resolved issue with sidebar opener by collapsing the visibility of the sidebar opener and making the options bar display flex, instead of grid.

--- a/static/options_bar.css
+++ b/static/options_bar.css
@@ -6,7 +6,7 @@
 }
 
 #options_bar ul {
-    display: grid;
+    display: flex;
     grid: 'sidebarOpener modelSelector';
     column-gap: 10px;
     margin-left: 0.9%;  /* Width of sidebar as in toggle_sidebar.mjs (18%) of sidebar_closer.left (5%) */
